webhooks/kyverno-policy-validating-webhook-cfg.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: "2022-03-23T10:28:53Z"
  generation: 1
  name: kyverno-policy-validating-webhook-cfg
  ownerReferences:
  - apiVersion: rbac.authorization.k8s.io/v1
    kind: ClusterRole
    name: kyverno:webhook
    uid: 80a477f2-324a-4a9f-bc6c-07f2b29e200a
  resourceVersion: "12770765"
  selfLink: /apis/admissionregistration.k8s.io/v1/validatingwebhookconfigurations/kyverno-policy-validating-webhook-cfg
  uid: 228893ba-5d33-464d-b67a-876f3b4ba203
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM3VENDQWRXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFZTVJZd0ZBWURWUVFEREEwcUxtdDUKZG1WeWJtOHVjM1pqTUI0WERUSXlNRE15TXpBNU1qZ3lNMW9YRFRJek1ETXlNekV3TWpneU0xb3dHREVXTUJRRwpBMVVFQXd3TktpNXJlWFpsY201dkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DCmdnRUJBS1dUMjZRR0pFUkpQSVFkZjVaZ3RJc2RrS3NwYXlSWVJLWDY5dzB2QnBIYlJXcU03VGN2Rkd4Z2Nka1EKU3NaVzEwTEFNUEJIOXVpeWxyOXdsYkdXRUd1R3BKdXBjV1czdTk0MnYvNXhBU3c4TmoxbW9KRzJqR0pMR2xzWQpsQ2NGSHFiTElOOH [...]
    service:
      name: kyverno-svc
      namespace: kyverno
      path: /policyvalidate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validate-policy.kyverno.svc
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - kyverno.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterpolicies/*
    - policies/*
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
